# sandhyaGPT

sandhya 3.0.11/sandhyaGPT/: ingest.py  items.txt  pyproject.toml  sandhya.py
sandhya/local-ai-system/: main.py  requirements.txt
sandhya/local-ai-system/core/: ai_engine.py  document_chunker.py
sandhya/local-ai-system/env/json/: settings.json
sandhya/local-ai-system/env/yaml/: settings.yaml
sandhya/local-ai-system/terminal/: load_env.py  processor.py
sandhya/local-ai-system/web/react_app/src/: App.js
sandhya/local-ai-system/web/react_app/src/components/: ChatWindow.js  Footer.js  Header.js
