[tool.poetry]
name = "sandhya"
version = "3.0.11"
description = "low level llm that run privetly in your computer"
authors = ["kishwor dulal  <kishwordulal19@gmail.com>"]
license = "Apache Version 2.0"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.274"
gpt4all = "1.0.8"
chromadb = "0.4.12"
llama-cpp-python = "0.1.81"
urllib3 = "2.0.4"
PyMuPDF = "1.23.1"
python-dotenv = "^1.0.0"
unstructured = "0.10.8"
extract-msg = "0.45.0"
tabulate = "^0.9.0"
pandoc = "^2.3"
pypandoc = "^1.11"
tqdm = "4.66.1"
sentence-transformers = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
